--- a/src/board/board.scss
+++ b/src/board/board.scss
@@ -2,10 +2,11 @@
   height: 100%;
   display: flex;
   overflow-x: auto;
-  min-height: calc(100vh - 46px);
+  min-height: 100vh ;
+  padding: 8px 4px 4px 8px;
+}
+body{
   background-image: url(./../assets/img/board-bg.jpg);
   background-position: center;
   background-size: cover;
-  padding: 8px 4px 4px 8px;
-  padding-top: 42px;
 }
